adding base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://advaitisawesome.com/'
 languageCode = 'en-us'
-title = 'Tales of Advait the Awesome!'
+title = 'Advait Ramanan'
 theme = 'tale'
