--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,19 @@ baseURL = 'https://advaitisawesome.com/'
 languageCode = 'en-us'
 title = 'Advait Ramanan'
 theme = 'tale'
+[menu]
+  [[menu.main]]
+    identifier = "about"
+    name = "About"
+    title = "About"
+    url = "/about/"
+    weight = 0
+  [[menu.main]]
+    identifier = "posts"
+    name = "Posts"
+    title = "Posts"
+    url = "/posts/"
+    weight = 0
+[Author]
+    name = "Advait"
+sectionPagesMenu = "main"
